Implement verification and password reset
